&&REG works, and first working module (HELLO)

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 *.lst
 *.tok
 *.tok2
-fixup.s
+*-fixup.s
 baaam-version.inc
 baaam-version.inc.tmp
 prodos-build
-BAAAM.2000
-BAAAM.3000
+*.2000
+*.3000
 BAAAM-PRODOS.po
 mkfixup
